Added enchant sorting